  * fixed bug in embedded calls of SORT (reported and investigated by
    Wolfgang Jenkner).
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** printing and reading of arrays with some dimensions having
       length 0 (thanks to Gerd Moellmann);
    ** BOA constructor with &AUX argument without a default value does
       not cause a type error;
    ** CONSTANTP now returns true for all self-evaluating objects.

changes in sbcl-0.7.13 relative to sbcl-0.7.12:
  * fixed a bug in LOG, so that LOG of a rational argument near 1 now
    gives a closer approximation to the right answer than previously.
    (thanks to Raymond Toy)
  * fixed bug 157: TYPEP, SUBTYPEP, UPGRADED-ARRAY-ELEMENT-TYPE and
    UPGRADED-COMPLEX-PART-TYPE now take (ignored, in all situations)
    optional environment arguments, as required by ANSI.
  * fixed bugs in other functions taking environment objects, allowing
    calls with an explicit NIL environment argument to be compiled
    without error.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** ARRAY-IN-BOUNDS-P now allows arbitrary integers as arguments,
       not just nonnegative fixnums;

planned incompatible changes in 0.7.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, maybe in 0.7.x, maybe later, it might impact TRACE. They both
    encapsulate functions, and it's not clear yet how e.g. UNPROFILE
    will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are
    using profiling. If you never profile anything, TRACE should
    continue to behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.